@@ -1,78 +1,93 @@
 package com.awesome.testing.security;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpStatus;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import jakarta.servlet.http.HttpServletResponse;
 
-import java.util.Arrays;
+import java.io.IOException;
+import java.util.List;
 
+import static com.awesome.testing.utils.ErrorResponseDefinition.sendErrorResponse;
+
+@SuppressWarnings("unused")
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class WebSecurityConfig {
 
+    private static final List<String> ALLOWED_ENDPOINTS = List.of(
+            "/users/signin",
+            "/users/signup",
+            "/h2-console/**",
+            "/v3/api-docs/**",
+            "/swagger-ui/**",
+            "/swagger-resources/**",
+            "/webjars/**",
+            "/actuator/**"
+    );
+
     private final JwtTokenProvider jwtTokenProvider;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         // Disable CSRF as we use JWT
-        http.csrf(csrf -> csrf.disable());
-        
+        http.csrf(AbstractHttpConfigurer::disable);
+
         // Enable CORS
         http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
-        
+
         // No session will be created or used by Spring Security
         http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-        
-        // Entry points
-        http.authorizeHttpRequests(auth -> auth
-            .requestMatchers("/users/signin").permitAll()
-            .requestMatchers("/users/signup").permitAll()
-            .requestMatchers("/h2-console/**").permitAll()
-            // Swagger endpoints
-            .requestMatchers("/v3/api-docs/**").permitAll()
-            .requestMatchers("/swagger-ui/**").permitAll()
-            .requestMatchers("/swagger-resources/**").permitAll()
-            .requestMatchers("/webjars/**").permitAll()
-            // Actuator endpoints
-            .requestMatchers("/actuator/**").permitAll()
-            // All other endpoints require authentication
-            .anyRequest().authenticated()
-        );
 
-        // Handle errors
+        // Define authorization rules
+        http.authorizeHttpRequests(auth -> {
+            ALLOWED_ENDPOINTS.forEach(endpoint -> auth.requestMatchers(new AntPathRequestMatcher(endpoint)).permitAll());
+            auth.anyRequest().authenticated();
+        });
+
+        // Handle authentication and authorization errors
         http.exceptionHandling(ex -> ex
-            .accessDeniedHandler((request, response, accessDeniedException) -> {
-                response.setContentType("application/json;charset=UTF-8");
-                response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                response.getWriter().write("{\"message\":\"Access denied\"}");
-            })
-            .authenticationEntryPoint((request, response, authException) -> {
-                response.setContentType("application/json;charset=UTF-8");
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("{\"message\":\"Unauthorized\"}");
-            })
+                .accessDeniedHandler(this::handleAccessDenied)
+                .authenticationEntryPoint(this::handleUnauthorized)
         );
 
         // Apply JWT security filter
         http.addFilterBefore(new JwtTokenFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
+    }
+
+    private void handleAccessDenied(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    AccessDeniedException ex) throws IOException {
+        sendErrorResponse(response, HttpStatus.FORBIDDEN, "Access denied");
+    }
+
+    private void handleUnauthorized(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    AuthenticationException ex) throws IOException {
+        sendErrorResponse(response, HttpStatus.UNAUTHORIZED, "Unauthorized");
     }
 
     @Bean
@@ -88,11 +103,11 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8081"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        configuration.setAllowedOrigins(List.of("http://localhost:8081"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
